
********************************************************************************

  Project : SHTRIH-M JavaPOS fiscal printer driver
  Company : SHTRIH-M www.shtrih-m.ru (095) 787-6090

********************************************************************************

  April 4 2017, 21:30
  deviceServiceVersion = 1013409
	
  [+] Added directIO command SMFPTR_DIO_PRINT_CORRECTION for correction receipt
  
********************************************************************************

  April 3 2017, 18:40
  deviceServiceVersion = 1013407
	
  [-] Fixed error with receipt format
  [-] Fixed error with writing tables
  [-] Fixed error with writing tags 15000, 15001, 15002

********************************************************************************

  April 3 2017, 13:00
  deviceServiceVersion = 1013405
	
  [-] Fixed error "Index out of bounds" on loading properties

********************************************************************************

  April 1 2017, 14:50
  deviceServiceVersion = 1013404
	
  [-] Changed default value of property powerNotify to JPOS_PN_ENABLED
  
********************************************************************************

  March 28 2017, 11:20
  deviceServiceVersion = 1013401
	
  [-] Fix error with quantity receipt item
  
********************************************************************************

  March 23 2017, 22:00
  deviceServiceVersion = 1013400
	
  [-] Fix error with discount in receipt item
  
********************************************************************************

  March 21 2017, 23:30
  deviceServiceVersion = 1013398
	
  [-] Fix error with receipt format
  [+] Add directIO command SMFPTR_DIO_READ_FS_TICKETS
  [+] Add directIO command SMFPTR_DIO_READ_FS_TICKETS2
  
********************************************************************************

  March 15 2017, 15:51
  deviceServiceVersion = 1013396
	
  [+] Added TAX_LETTER tag to ReceiptTemplate
  [+] Added MULT_NE_ONE tag to ReceiptTemplate
  