@@ -41,7 +41,7 @@ public class DIOPrintCorrectionReceipt extends DIOItem {
         command.setTaxTotal(4, (Long)params[12]);
         command.setTaxTotal(5, (Long)params[13]);
         command.setTaxSystem((Integer)params[14]);
-        service.getPrinter().execute(command);
+        service.getPrinter().fsPrintCorrectionReceipt2(command);
         if (params.length >= 18)
         {
             params[15] = command.getReceiptNumber();
