@@ -6,9 +6,10 @@
 
 ********************************************************************************
 
-  April 4 2017, 21:30
-  deviceServiceVersion = 1013409
+  April 7 2017, 23:10
+  deviceServiceVersion = 1013410
 	
+  [-] Fixed error with receipt format
   [+] Added directIO command SMFPTR_DIO_PRINT_CORRECTION for correction receipt
   
 ********************************************************************************
